[package]
name = "rumb"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
tokio = { version = "1.21.2", features = ["full"] }
pnet = "0.31.0"
pnet_sys = "0.31.0"
pnet_datalink = "0.31.0"
pnet_transport = "0.31.0"
signal-hook="0.3.14"
ffi-convert="0.5.0"